Patternlab/dp 40822 fix focus states high contrast mode (#2005)
* wip selectbox

* consolidate styles

* show native number inputs in high contrast mode

* fix error message styles

* fix error style and consolidate select box styles

* consolidate focus highlights

* consolidate focus ring styles

* fix error state in high contrast mode

* refactor and scope input styles

* extend input styles in specific input components without the main class

* fix vrt

* style linting

* add changelog

* refactor input styles into a mixin to avoid import ordering issues

* approve patternlab backstop

* fix react typeahead backstop

* fix react backstop

* fix react feedback form backstop

* fix react feedback form backstop

---------

--- a/packages/assets/scss/00-base/_pikaday.scss
+++ b/packages/assets/scss/00-base/_pikaday.scss
@@ -10,6 +10,8 @@
 
 .pika-single {
   font-family: $fonts;
+  background-color: var(--mf-c-bg-section);
+  padding: 1rem;
 
   abbr[title] {
     text-decoration: none;
