--- a/packages/assets/scss/01-atoms/_input-date.scss
+++ b/packages/assets/scss/01-atoms/_input-date.scss
@@ -3,6 +3,8 @@
 @use "00-base/configure" as *;
 
 .ma__input-date[type=text] {
+
+  @include input-base;
   background-image: url("#{$assets-path}/images/icons/date-picker.svg");
   background-position: right 8px top 7px;
   background-repeat: no-repeat;
