--- a/packages/assets/scss/02-molecules/_error-list.scss
+++ b/packages/assets/scss/02-molecules/_error-list.scss
@@ -43,13 +43,17 @@
   &__icon {
     font-size: 0;
     margin-right: 7px;
+    
+    & > svg {
+      width: $fonts-large;
+      height: $fonts-large;
+    }
   }
 
 
   &__messages {
-    font-size: $fonts-smaller;
     margin-bottom: 0;
-    padding-left: 53px;
+    padding-left: 3rem;
   }
 
   &__label {
@@ -74,6 +78,11 @@
     background-color: var(--mf-c-error-red-lightest);
     border-color: var(--mf-c-bd-error);
     color: var(--mf-c-font-error);
+    // High contrast mode error visibility
+
+    @media (forced-colors: active) {
+      color: Mark;
+    }
   }
 
   &__title {
@@ -84,5 +93,10 @@
     border-color: var(--mf-c-bd-error);
     color: var(--mf-c-font-error);
     font-weight: $fonts-light;
+    // High contrast mode error visibility
+
+    @media (forced-colors: active) {
+      color: Mark;
+    }
   }
 }
