--- a/packages/assets/scss/02-molecules/_header-search.scss
+++ b/packages/assets/scss/02-molecules/_header-search.scss
@@ -15,6 +15,8 @@ $bp-header-search-reduce-button: "max-width: 700px";
   }
 
   &__input {
+
+    @include input-base;
     font-size: $fonts-medium;
     height: $header-search-height;
     padding-right: 128px;
